static/css/output.css
/* ... */
body{
  font-family: "Inter", sans-serif;
}

.container {
  width: 100%;
}

@media (min-width: 576px) {
  .container {
    max-width: 576px;
  }
}

@media (min-width: 768px) {
  .container {
    max-width: 768px;
  }
}

@media (min-width: 1024px) {
  .container {
    max-width: 1024px;
  }
}

@media (min-width: 1280px) {
  .container {
    max-width: 1280px;
  }
}

.section-custom {
  width: 100%;
}

.container-custom {
  margin-left: auto;
  margin-right: auto;
  max-width: 1280px;
  padding-left: 1rem;
  padding-right: 1rem;
}

@media (min-width: 768px) {
  .container-custom {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width: 1024px) {
  .container-custom {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

.container-dashboard {
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

/* All button clasess here  */

.btn {
  border-radius: 6px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
  padding-right: 10px;
  font-size: 14px;
  font-weight: 600;
  transition-property: all;
  transition-duration: 500ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.btn-small {
  border-radius: 6px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  font-weight: 600;
  transition-property: all;
  transition-duration: 500ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.btn-primary {
  border-width: 1px;
  border-color: var(--primary);
  background-color: var(--primary);
  color: var(--white);
}

.btn-primary:hover {
  background-color: var(--primary-light);
  color: var(--primary);
}

.btn-secondary {
  border-width: 1px;
  border-color: var(--primary);
  background-color: var(--primary-light);
  color: var(--primary);
}

.btn-secondary:hover {
  background-color: var(--primary);
  color: var(--white);
}

.btn-info {
  border-width: 1px;
  border-color: var(--info);
  background-color: var(--info);
  color: var(--white);
}

.btn-info:hover {
  background-color: var(--primary-light);
  color: var(--info);
}

.btn-danger {
  border-width: 1px;
  border-color: var(--danger);
  background-color: var(--danger);
  color: var(--white);
}

.btn-danger:hover {
  background-color: var(--primary-light);
  color: var(--danger);
}

.btn-success {
  border-width: 1px;
  border-color: var(--success);
  background-color: var(--success);
  color: var(--white);
}

.btn-success:hover {
  background-color: var(--primary-light);
  color: var(--success);
}

.btn-warning {
  border-radius: 6px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
  padding-right: 10px;
  font-size: 14px;
  font-weight: 600;
  transition-property: all;
  transition-duration: 500ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  border-width: 1px;
  border-color: var(--warning);
  background-color: var(--warning);
  color: var(--white);
}

.btn-warning:hover {
  background-color: var(--primary-light);
  color: var(--warning);
}

.status {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.status-tag {
  border-radius: 9999px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  font-size: 0.75rem;
  line-height: 1rem;
  color: var(--white);
}

/* all text-font style here  */

.primary-heading {
  font-size: 20px;
  font-weight: 700;
  color: var(--text-heading);
}

@media (min-width: 768px) {
  .primary-heading {
    font-size: 25px;
  }
}

@media (min-width: 1024px) {
  .primary-heading {
    font-size: 30px;
  }
}

.secondary-heading {
  font-size: 18px;
  font-weight: 700;
  color: var(--text-heading);
}

@media (min-width: 768px) {
  .secondary-heading {
    font-size: 22px;
  }
}

@media (min-width: 1024px) {
  .secondary-heading {
    font-size: 25px;
  }
}

.body-bold-text {
  font-size: 16px;
  font-weight: 700;
  color: var(--text-body);
}

.body-text {
  font-size: 14px;
  color: var(--text-body);
}

/* all cards design  here  */

.card {
  border-radius: 6px;
  background-color: var(--white);
  padding: 20px;
  --tw-shadow: rgba(0,0,0,0.1) -4px 9px 25px -6px;
  --tw-shadow-colored: -4px 9px 25px -6px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

/* all Icons design  here  */

.icon {
  display: flex;
  height: 50px;
  width: 50px;
  align-items: center;
  justify-content: center;
  border-radius: 9999px;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 500ms;
}

.small-icon {
  display: flex;
  height: 30px;
  width: 30px;
  align-items: center;
  justify-content: center;
  border-radius: 9999px;
  padding: 1rem;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 500ms;
}

.icon-primary {
  border-width: 1px;
  background-color: var(--primary-light);
  color: var(--primary);
}

.icon-primary:hover {
  background-color: var(--primary);
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
}

/* hyper link text desin here  */

.text-link {
  font-weight: 600;
  color: var(--text-body);
  text-decoration-style: solid;
  transition-property: all;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.text-link:hover {
  --tw-translate-x: 3px;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  color: var(--primary);
  text-decoration-line: underline;
}

.input {
  width: 100%;
  border-radius: 6px;
  border-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
  padding-right: 10px;
}
/* ... */

